@@ -1,8 +1,10 @@
 package com.example.server.service;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -16,6 +18,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import com.example.server.dto.BoardDTO;
+import com.example.server.dto.BoardViewResponseDTO;
 import com.example.server.dto.ImageDTO;
 import com.example.server.dto.PageRequestDTO;
 import com.example.server.dto.PageResultDTO;
@@ -23,17 +26,16 @@ import com.example.server.entity.Board;
 import com.example.server.entity.BoardChannel;
 import com.example.server.entity.BoardLike;
 import com.example.server.entity.Member;
+import com.example.server.entity.BoardViewLog;
 import com.example.server.entity.Reply;
 import com.example.server.repository.BoardChannelRepository;
 import com.example.server.repository.BoardLikeRepository;
 import com.example.server.repository.BoardRepository;
+import com.example.server.repository.BoardViewLogRepository;
 import com.example.server.repository.MemberRepository;
 import com.example.server.repository.ReplyRepository;
 import com.example.server.security.CustomMemberDetails;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
@@ -48,30 +50,13 @@ public class BoardService {
     private final ReplyRepository replyRepository;
     private final BoardChannelRepository boardChannelRepository;
     private final BoardLikeRepository boardLikeRepository;
+    private final BoardViewLogRepository boardViewLogRepository;
 
     private static final Long TOP_STRAWBERRY_CHANNEL_ID = 3L;
     // 좋아요 기준치
     private static final Long LIKE_THRESHOLD = 1L;
 
     private static final ObjectMapper objectMapper = new ObjectMapper();
-
-    private String toJson(List<ImageDTO> list) {
-        try {
-            return objectMapper.writeValueAsString(list);
-        } catch (Exception e) {
-            throw new RuntimeException("JSON 직렬화 실패", e);
-        }
-    }
-
-    private List<ImageDTO> fromJson(String json) {
-        try {
-            return (json == null || json.isBlank()) ? List.of()
-                    : objectMapper.readValue(json, new TypeReference<List<ImageDTO>>() {
-                    });
-        } catch (JsonProcessingException e) {
-            throw new RuntimeException("JSON 파싱 실패", e);
-        }
-    }
 
     @Transactional
     public boolean toggleBoardLike(Long bno, Member member) {
@@ -81,6 +66,8 @@ public class BoardService {
 
         if (existing.isPresent()) { // 취소
             boardLikeRepository.delete(existing.get());
+            board.setBoardLikeCount(board.getBoardLikeCount() - 1);
+            boardRepository.save(board);
             return false;
         } else { // 등록
             BoardLike like = BoardLike.builder()
@@ -88,6 +75,8 @@ public class BoardService {
                     .member(member)
                     .build();
             boardLikeRepository.save(like);
+            board.setBoardLikeCount(board.getBoardLikeCount() + 1);
+            boardRepository.save(board);
             return true;
         }
     }
@@ -105,14 +94,24 @@ public class BoardService {
         CustomMemberDetails userDetails = (CustomMemberDetails) auth.getPrincipal();
         Member loginMember = memberRepository.findById(userDetails.getId()).orElseThrow();
 
+        String attachmentsJson = "[]"; // ← 기본값으로 빈 배열 JSON
+
+        try {
+            // null도 허용 → 항상 JSON 문자열로 변환
+            attachmentsJson = objectMapper.writeValueAsString(
+                    Optional.ofNullable(dto.getAttachments()).orElse(List.of()));
+        } catch (Exception e) {
+            log.error("❌ attachments 직렬화 실패: {}", e.getMessage());
+        }
+
         BoardChannel channel = boardChannelRepository.findById(dto.getChannelId())
                 .orElseThrow(() -> new RuntimeException("채널 없음"));
 
         Board board = Board.builder()
                 .title(dto.getTitle())
                 .content(dto.getContent())
-                .attachmentsJson(toJson(dto.getAttachments()))
                 .member(loginMember)
+                .attachments(attachmentsJson)
                 .channel(channel)
                 .build();
 
@@ -138,7 +137,6 @@ public class BoardService {
 
         board.setTitle(dto.getTitle());
         board.setContent(dto.getContent());
-        board.setAttachmentsJson(toJson(dto.getAttachments()));
 
         return boardRepository.save(board).getBno();
     }
@@ -154,18 +152,17 @@ public class BoardService {
                 pageRequestDTO.getType(),
                 pageRequestDTO.getKeyword(), pageable);
 
-        Function<Object[], BoardDTO> fn = en -> BoardDTO.builder()
+        Function<Object[], BoardDTO> fn = (en -> BoardDTO.builder()
                 .bno((Long) en[0])
                 .title((String) en[1])
                 .createdDate((LocalDateTime) en[2])
                 .nickname((String) en[3])
                 .replyCount((Long) en[4])
-                .attachments(fromJson((String) en[5]))
-                .viewCount((Long) en[6])
-                .boardLikeCount((Long) en[7])
-                .channelId((Long) en[8])
-                .channelName((String) en[9])
-                .build();
+                .viewCount((Long) en[5]) //
+                .boardLikeCount((Long) en[6])
+                .channelId((Long) en[7])
+                .channelName((String) en[8])
+                .build());
 
         return PageResultDTO.<BoardDTO>withAll()
                 .dtoList(result.map(fn).getContent())
@@ -175,18 +172,55 @@ public class BoardService {
     }
 
     @Transactional
-    public BoardDTO getRow(Long bno) {
-        // 1) 조회
-        Board board = boardRepository.findById(bno).orElseThrow();
-        board.increaseViewCount();
-        Object[] result = boardRepository.getBoardRow(bno);
-        return entityToDto((Board) result[0], (Member) result[1], (Long) result[2]);
-    }
+    public BoardViewResponseDTO getRow(Long bno, String viewedBoardsCookie) {
+        Board board = boardRepository.findById(bno)
+                .orElseThrow(() -> new NoSuchElementException("게시글을 찾을 수 없습니다. bno=" + bno));
 
-    @Transactional
-    public void increaseLike(Long bno) {
-        Board board = boardRepository.findById(bno).orElseThrow();
-        board.increaseBoardLikeCount();
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        String newCookieValue = null;
+
+        // 1. 로그인 사용자 처리
+        if (authentication != null && authentication.isAuthenticated()
+                && authentication.getPrincipal() instanceof CustomMemberDetails) {
+            CustomMemberDetails userDetails = (CustomMemberDetails) authentication.getPrincipal();
+            Member member = memberRepository.findById(userDetails.getId())
+                    .orElseThrow(() -> new NoSuchElementException("사용자를 찾을 수 없습니다. ID: " + userDetails.getId()));
+
+            if (!boardViewLogRepository.existsByBoardAndMember(board, member)) {
+                board.increaseViewCount(); // 조회수 증가
+                BoardViewLog viewLog = BoardViewLog.builder().board(board).member(member).build();
+                boardViewLogRepository.save(viewLog); // 조회 기록 저장
+            }
+        }
+        // 2. 비로그인 사용자 처리 (쿠키 기반)
+        else {
+            boolean alreadyViewed = false;
+            String bnoStr = String.valueOf(bno);
+
+            if (viewedBoardsCookie != null && !viewedBoardsCookie.isBlank()) {
+                // 쿠키 값에 현재 게시글 ID가 있는지 확인
+                if (viewedBoardsCookie.contains("[" + bnoStr + "]")) {
+                    alreadyViewed = true;
+                }
+            }
+
+            if (!alreadyViewed) {
+                board.increaseViewCount(); // 조회수 증가
+                // 컨트롤러에서 쿠키를 생성할 수 있도록 새로운 쿠키 값을 준비
+                newCookieValue = (viewedBoardsCookie == null ? "" : viewedBoardsCookie) + "[" + bnoStr + "]";
+            }
+        }
+
+        Object[] result = boardRepository.getBoardRow(bno);
+        BoardDTO boardDTO;
+        if (result == null) {
+            // getBoardRow가 결과를 못찾는 경우 (삭제 직후 등)
+            boardDTO = entityToDto(board, board.getMember(), 0L);
+        } else {
+            boardDTO = entityToDto((Board) result[0], (Member) result[1], (Long) result[2]);
+        }
+
+        return new BoardViewResponseDTO(boardDTO, newCookieValue);
     }
 
     public List<BoardDTO> getBoardsByChannel(Long channelId) {
@@ -215,14 +249,15 @@ public class BoardService {
 
     public List<BoardDTO> getBoardsByWriterEmail(String email) {
         Member member = memberRepository.findByEmail(email).orElseThrow();
-        return boardRepository.findAllByMember(member)
-                .stream()
-                .map(b -> entityToDto(b, member, null))
-                .collect(Collectors.toList());
+        List<Board> boards = boardRepository.findAllByMember(member);
+
+        return boards.stream()
+                // replycount는 기존 entitytodto재활용할거라 null로 지정했습니다
+                .map(board -> entityToDto(board, member, null))
+                .toList();
     }
 
     private BoardDTO entityToDto(Board board, Member member, Long replyCount) {
-        List<ImageDTO> attachments = fromJson(board.getAttachmentsJson());
 
         return BoardDTO.builder()
                 .bno(board.getBno())
@@ -233,11 +268,11 @@ public class BoardService {
                 .memberid(member != null ? member.getId() : null)
                 .nickname(member != null ? member.getNickname() : null)
                 .replyCount(replyCount != null ? replyCount : 0L)
-                .attachments(attachments)
                 .viewCount(board.getViewCount())
                 .boardLikeCount(board.getBoardLikeCount())
                 .channelId(board.getChannel().getId())
                 .channelName(board.getChannel().getName())
                 .build();
     }
+
 }
